[tool.poetry]
name = "youtube-downloader"
version = "0.1.0"
description = ""
authors = ["Robert Martin <robert.d.martin@icloud.com>"]
readme = "README.md"
packages = [{include = "youtube_downloader"}]

[tool.poetry.dependencies]
python = ">=3.8,<3.9.7 || >3.9.7,<4.0"
streamlit = "^1.25.0"
pytube = "^15.0.0"
pytubefix = "^2.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
